# gym-predictions

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  nginx.dev.conf  pyproject.toml
backend/: dev.Dockerfile
daily_csv/: ulkoliikunta-daily-20211001-20211101.csv  ulkoliikunta-daily-20211101-20211201.csv  ulkoliikunta-daily-20211201-20220101.csv  ulkoliikunta-daily-20220301-20220401.csv  ulkoliikunta-daily-20220401-20220501.csv  ulkoliikunta-daily-20220701-20220801.csv  ulkoliikunta-daily-20220901-20221001.csv  ulkoliikunta-daily-20221101-20221201.csv  ulkoliikunta-daily-20230101-20230201.csv  ulkoliikunta-daily-20230201-20230301.csv  ulkoliikunta-daily-20230301-20230401.csv  ulkoliikunta-daily-20230401-20230501.csv  ulkoliikunta-daily-20230601-20230701.csv  ulkoliikunta-daily-20230801-20230901.csv  ulkoliikunta-daily-20231001-20231101.csv  ulkoliikunta-daily-20240101-20240201.csv  ulkoliikunta-daily-20240301-20240401.csv  ulkoliikunta-daily-20240401-20240501.csv  ulkoliikunta-daily-20240501-20240601.csv  ulkoliikunta-daily-20240701-20240708.csv  ulkoliikunta-daily-20240715-20240722.csv  ulkoliikunta-daily-20240729-20240805.csv  ulkoliikunta-daily-20240805-20240812.csv  ulkoliikunta-daily-20240812-20240819.csv  ulkoliikunta-daily-20240819-20240826.csv  ulkoliikunta-daily-20240826-20240902.csv  ulkoliikunta-daily-20240902-20240909.csv
frontend/: dev.Dockerfile  package-lock.json  package.json  vite.config.js
hourly_csv/: ulkoliikunta-hourly-20210501-20210601.csv  ulkoliikunta-hourly-20210701-20210801.csv  (+35 more)
models/: Hietaniemi_model.pkl  (+1 more)
(+86 files in other folders)
