[tool.poetry]
name = "gym-predictions"
version = "0.1.0"
description = ""
authors = ["tumffa <tuomas.v.niemi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
eccodes = "^2.38.1"
fmiopendata = "^0.4.3"
matplotlib = "^3.9.2"
flask = "^3.0.3"
flask-cors = "^5.0.0"
joblib = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
